fix: fecha os achados da revisao do guardrail de cota
Uma configuracao invertida derrubava a API em producao. O TTL degradado e
um piso dentro do TTL cheio, mas sao duas variaveis de ambiente
independentes: com o degradado maior, Math.clamp recebia min > max e
lancava IllegalArgumentException — dentro da escrita no cache, sob
@Cacheable, ou seja, 500 em /api/favoritos, /api/time e /api/ranking, a
cada requisicao e depois de o credito ja ter sido gasto. O OddsProperties
passa a recusar isso no boot, nomeando as duas propriedades, e o Expiry
aplica piso e teto na mao para nao ter como lancar.

Pela mesma razao as quatro propriedades ganham minimo 1: com
sonda-intervalo-horas=0, toda requisicao virava sondagem e o guardrail
deixava de existir na pratica, gastando exatamente a cota que preserva.

odds_api_requests_total contava so o sucesso: a chamada recusada por cota
estourada — o evento que este guardrail existe para tornar visivel — so
acontece no caminho de erro e ficava de fora justamente do contador de
consumo. Passa a contar na tentativa, o que tambem faz errors/requests
voltar a ser uma taxa, ja que os dois mediam universos disjuntos.

Os nomes das metricas saem para a convencao pontuada do Micrometer, com a
traducao para o formato do Prometheus fixada por teste: o codigo deixa de
depender do exporter da vez sem que dashboard e alerta percam o nome por
que perguntam.

/api/odds/cota passa a devolver ultimaSondagem e proximaSondagem. Com
guardrailAtivo=true, quando isso destrava sozinho era a unica pergunta que
sobrava para quem estava olhando, e a resposta so existia no log.

O README ainda anunciava 32 classes e 560 cenarios enquanto o context.md
ja fora atualizado; os dois agora batem com o build (42 e 739).

Refs #40

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HdEmoRWvsrhzdHUCcY941F